# exam-api

./: .env  .gitignore  Docker-compose.yaml  Dockerfile  README.md  _test.db  alembic.ini  architecture.txt  commit.sh  data.db  main.py  pyproject.toml  requirements.txt  test.db  test1.db  test2.db
alembic/: env.py
alembic/versions/: 036d1f10d546_adding_profile_table.py  03fea6de5a40_updaditing_modules_table.py  0504a026424b_modifying_refresh_token_table.py  068c636894e0_bug_fix_relationship_2.py  08abbe18187b_modifying_address_table_id.py  134cd415a113_fixing_relationship_errors.py  15bf6009e59a_modified_exam_table1.py  18fad8da6cfa_modifying_id_mappings_of_tables.py  1a7b6598a92f_modified_exam_table4.py  1b3b0111c8c5_updaditing_course_table_for_student_.py  212197ca122e_more_tables.py  21f05d072b78_modifying_all_id_to_string.py  27c5163d8ccb_modified_exam_table3.py  2ce090050602_reorganized_code8.py  31a8a246387b_updating_news_table.py  32f89590e7d1_modifying_address_table_id_4.py  33ed4b8b01ea_reorganized_code.py  35d467643a56_redesigning_with_mixins.py  37d7c6e9531b_bug_fix_relationship_4.py  3e913c7ebfd8_linking_question_with_others.py  3ed31bdf6235_adding_program_to_exam.py  41a71e4105cd_modifying_address_relationship_to_.py  42c59c7ca12a_fixing_relationship_errors.py  46e033b3d586_reorganized_code7.py  4a8efc4e0523_user_refresh_tokens.py  4aca9c2ec436_reorganized_code5.py  4beb995481ac_modifying_course_table.py  4e77cb2eb573_modifying_exam_attempt_table.py  (+42 more)
app/: README.md  main.py  model.py  test.db
tests/: _rest.rest  conftest.py  test_auth.py  test_users.py
(+142 files in other folders)
